# Project_C

./: CMakeLists.txt  README.md  edid.c  edid.h  main.c
Project_1_test/src/: edid.c  edid.h
Project_1_test/test/: test_1.c
